tests/samples/negative/pattern_matching/const_pattern_struct_unsupported.ax
module const_pattern_struct_unsupported;

struct Point {
    x: i32;
}

const ORIGIN: Point = Point { x: 0 };

fn main() -> i32 {
    let point = Point { x: 1 };
    return match point {
        const ORIGIN => 1,
        _ => 0,
    };
}
